# virtual-environment-autonomous-driving-competition

./: README.md  map.pgm
convert_lidar/: CMakeLists.txt  package.xml
convert_lidar/launch/: convert_lidar.launch
convert_lidar/src/: convert_lidar.cpp
lane_detection/: CMakeLists.txt  package.xml
lane_detection/backup/: lane_detection.py  lane_detection_faster.py  lane_detection_while.py  slidewindow.py
lane_detection/launch/: lane_detection.launch
lane_detection/src/: slidewindow_faster.py
lane_pkg/launch/: lane_detection.launch
lane_pkg/src/: driving_es.py  imu_test.py  lane_drive.py  lane_drive_new.py  lanenet_sliding_fusion_real.py  line_detector.py  slidewindow2.py  warper.py
obstacle_detection/: CMakeLists.txt  package.xml
obstacle_detection/cfg/: hyper_parameter_dynamic_static.cfg  hyper_parameter_rotary.cfg
obstacle_detection/launch/: obstacle_detection.launch
obstacle_detection/msg/: ObstacleInfo.msg
obstacle_detection/rviz/: obstacle_detection.rviz
obstacle_detection/src/: header.h  obstacle_detection_dynamic_static.cpp  obstacle_detection_rotary.cpp
path_maker/goal/: gloabl_goals_backup.txt  global_goals.txt  tmp.txt
path_maker/launch/: goal_maker.launch  path_maker.launch  path_maker_odom.launch
path_maker/path/: first_global_path.txt  global_path.txt  global_path_rot.txt  shin_oh.txt  test.txt  tmp_odom.txt
path_maker/src/: goal_maker.py  goal_maker_with_ego.py  path_maker.py  path_maker_ego.py  path_maker_odom.py
wecar_ros/: map.pgm
wecar_ros/launch/: diff_odom.launch  (+5 more)
wego_2d_nav/: CMakeLists.txt  package.xml
(+34 files in other folders)
